--- a/PhoneBookWithFile/PhoneBookWithFile.csproj
+++ b/PhoneBookWithFile/PhoneBookWithFile.csproj
@@ -7,4 +7,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Rusult to GIF\" />
+  </ItemGroup>
+
 </Project>
